# generic-rat

./: Cargo.toml  LICENSE  README.md  REPORT.md  index.html
.serena/: project.yml
assets/: sample.txt
docs/bugs/: 11-02-file-upload.md
src/: lib.rs
