[package]
name = "generic-rat"
version = "0.1.0"
authors = ["Joseph LeBlanc <joseph.t.leblanc@protonmail.com>"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"] # <-- required for wasm output

[dependencies]
ratatui = { version = "0.29.0", default-features = false }
color-eyre = "0.6.5"
ratzilla = "0.2.0"

gloo-net = "0.6"

# Rust <-> JS/WASM glue and async executor for the browser
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Better panic messages in the browser console (optional but helpful)
console_error_panic_hook = "0.1"

# JS/WASM interop crates
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window"] }
